# net

./: .gitmodules  CMakeLists.txt  README.md  biicode.conf  connection.hpp  exception.hpp  settings.hpp  tcp.hpp  transport.hpp  udp.hpp
channels/: async_stream.hpp  sync_message.hpp  sync_random.hpp  sync_stream.hpp
details/: allocator.hpp  channel.hpp  channel_base.hpp  connection.hpp  exception.hpp  factory.hpp  memory.hpp  params.hpp  persistent_queue.hpp  stream.hpp  transport.hpp
include/net/: connection.hpp  exception.hpp  ipc.hpp  pipe.hpp  sequence.hpp  std.hpp  tcp.hpp  transport.hpp
include/net/channels/: async_stream.hpp  std_stream.hpp  sync_message.hpp  sync_queue.hpp  sync_random.hpp  sync_stream.hpp  traits.hpp
include/net/details/: channel.hpp  channel_base.hpp  connection_wrapper.hpp  factory.hpp  memory.hpp  params.hpp  persistent_queue.hpp  sequence_impl.hpp  settings.hpp  stream.hpp  streambuf_holder.hpp  transport_impl.hpp
include/net/transports/: std.hpp  tcp.hpp  udp.hpp
include/net/transports/linux/: pipe.hpp
include/net/transports/win32/: async_pipe.hpp  async_pipe_impl.hpp  ipc.hpp  pipe.hpp  pipe_security.hpp  pipe_security_impl.hpp
tests/: CMakeLists.txt  memory_pool_tests.cpp  net_tests.cpp  pack_test.cpp  pack_test.h  persistent_queue.h  persistent_queue_tests.cpp  sequence_tests.cpp  transport_tests.cpp  transport_tests.h
transports/: tcp.hpp  udp.hpp
